# promptdiff

./: LICENSE  README.md  agent.md  justfile  pyproject.toml
src/promptdiff/: __init__.py  cli.py
src/promptdiff/commands/: __init__.py  compare.py  dashboard.py  init.py  record.py
tests/: test_cli.py
tests/commands/: test_compare.py  test_dashboard.py  test_init.py  test_record.py
