[project]
name = "promptdiff"
version = "0.1.0"
description = "CLI and dashboard tool to track and compare LLM output quality"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Promptdiff", email = "team@example.com"}
]

[project.scripts]
promptdiff = "promptdiff.cli:app"

[project.optional-dependencies]
cli = ["typer[all] >=0.9.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
